fix:[server] 一部APIでDTOが正しく生成されない問題を修正
