# server/src/drive/dto/drive-connection-delete-response.dto.ts
@@ -1,0 +1,9 @@
+/**
+ * ドライブ接続削除レスポンスDTO
+ */
+export class DriveConnectionDeleteResponseDto {
+  /**
+   * 処理結果メッセージ
+   */
+  message!: string;
+}
