# server/src/drive/dto/index.ts
@@ -1,2 +1,5 @@
 export { FileItemDto } from './file-item.dto';
 export { FolderListDto } from './folder-list.dto';
+export { DriveConnectionInitiateResponseDto } from './drive-connection-initiate-response.dto';
+export { DriveConnectionCallbackResponseDto } from './drive-connection-callback-response.dto';
+export { DriveConnectionDeleteResponseDto } from './drive-connection-delete-response.dto';
